# Five_In_A_Row

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  resource.qrc
.github/workflows/: build.yaml  build_and_deploy.yaml  build_and_release.yaml  cpp-linter.yaml  release.yaml
model/: board.h  coordinate.h  manager.cpp  manager.h
src/: board.cpp  board.h  main.cpp  record.cpp  record.h  ui.cpp  ui.h
src/controller/: boardcontroller.cpp  boardcontroller.h  selectioncontroller.cpp  selectioncontroller.h
src/model/: board.cpp  board.h  boardmodel.cpp  boardmodel.h  computer.cpp  computer.h  coordinate.cpp  coordinate.h  manager.cpp  manager.h  match.cpp  match.h  player.cpp  player.h  resource.h
src/net/: authapi.cpp  authapi.h  authstore.cpp  authstore.h  onlinesession.cpp  onlinesession.h  wsclient.cpp  wsclient.h
src/ui/: loadingindicator.cpp  loadingindicator.h  logindialog.cpp  logindialog.h  mainui.cpp  mainui.h  menuui.cpp  menuui.h  onlineroomdialog.cpp  onlineroomdialog.h  piecebutton.cpp  piecebutton.h  selectionui.cpp  selectionui.h  settingsdialog.cpp  settingsdialog.h
src/util/: settingspath.cpp  settingspath.h
